syntax = "proto3"

package user;

service UserService{
    rpc createUser (createUserrequest) returns (UserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
    rpc GetUsers (Empty) returns (UserListResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message  GetUserByIdRequest {
    string name = 1;
    string email = 2;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message UserListResponse {
    repeated UserResponse users= 1;
}

message Empty{}